Fully-Private-Cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  namespace: default
  labels:
    app: node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: 362708816803.dkr.ecr.ap-northeast-2.amazonaws.com/app:latest
          ports:
            - containerPort: 8080
