Fully-Private-Cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
  namespace: default
spec:
  selector:
    app: node
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: node
      protocol: TCP
      port: 8080
      targetPort: 8080
